# src/routes.ts
@@ -1,12 +1,13 @@
 import {Router} from "express";
 import ContractAnalysis from "./contractAnalysis/controller";
-import {contractAndChain, history, transaction} from "./validators";
+import {chatValidator, contractAndChain, history, transaction} from "./validators";
 
 
 const router = Router();
 
 const analyzeController = new ContractAnalysis();
 
+router.post('/chat', chatValidator, analyzeController.chat);
 router.post('/contract/analyze', contractAndChain, analyzeController.contractAnalysis);
 router.post('/contract/info', contractAndChain, analyzeController.contractInfo);
 router.post('/transaction/analyze', transaction, analyzeController.transactionAnalysis);
